# qemu-c-gui

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
src/: main.c
src/shaders/: checker.c  checker.h  constants.c  constants.h  loader.c  loader.h  matrix.c  matrix.h  program.c  program.h  types.h
src/shaders/assets/: vertex_shader.glsl
tests/: macroses.c  main.test.c  matrix.test.c  matrix.test.h
